Bug 410041 - qm-mini-ubuntu talos machines sometimes taking ~8 hours for a run Bustage fix (Ts on mac) a=anodelman r=rcampbell
UltraBlame original commit: cf5e63d8d9becf28c92ee1d806268b2da64aaa2c

--- a/testing/performance/talos/startup_test/startup_test.html
+++ b/testing/performance/talos/startup_test/startup_test.html
@@ -39,6 +39,7 @@
 <html>
 
 
+<script language="JavaScript" type="text/javascript" src="../page_load_test/quit.js"></script>
 
 <body onload="
     var now = (new Date()).getTime();  
@@ -48,6 +49,7 @@
     if (window.dump) {
       dump('__start_report' + startupTime + '__end_report\n\n');
     }
+    goQuitApplication();
     window.close();
 ">
 </body>
