--- a/accessible/tests/mochitest/attributes/test_obj.html
+++ b/accessible/tests/mochitest/attributes/test_obj.html
@@ -109,6 +109,9 @@
       // no object attributes
       testAbsentAttrs(getAccessible("listitem").firstChild, { "tag": "" });
 
+      // experimental aria
+      testAttrs("experimental", {"blah" : "true"}, true);
+
       SimpleTest.finish();
     }
 
@@ -141,6 +144,11 @@
      href="https://bugzilla.mozilla.org/show_bug.cgi?id=663136"
      title="Add test coverage for tablist as implicit live region">
     Mozilla Bug 663136
+  </a>
+  <a target="_blank"
+     href="https://bugzilla.mozilla.org/show_bug.cgi?id=563862"
+     title="Expand support for nsIAccessibleEvent::OBJECT_ATTRIBUTE_CHANGE">
+    Mozilla Bug 563862
   </a>
   <p id="display"></p>
   <div id="content" style="display: none"></div>
@@ -201,5 +209,8 @@
   <ul>
     <li id="listitem">item
   </ul>
+
+  
+  <div id="experimental" aria-blah="true">Fake beer</div>
 </body>
 </html>
