Bug 561664 - document.activeElement should never return native anonymous content, r=enndeakin
UltraBlame original commit: 032d43b1770f0ffe0c0112d2b426527f57f27494

--- a/content/events/test/test_bug238987.html
+++ b/content/events/test/test_bug238987.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-<!--
-https://bugzilla.mozilla.org/show_bug.cgi?id=238987
--->
+
+
+
 <head>
   <title>Test for Bug 238987</title>
   <script type="text/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>        
@@ -61,6 +61,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=238987
          expected + "], got [" + e.target.id + "]");
     } else {
       var expected = forwardFocusArray.shift();
+      is(e.target, document.activeElement, "Wrong activeElement!");
       ok(expected == e.target.id,
          "(focus) Forward tabbing, expected [" +
          expected + "], got [" + e.target.id + "]");
