Bug 675879 - clean up nsIAccessible action methods, r=surkov
UltraBlame original commit: ca31a899ce4ea86b7c1eb6e1d597ba5f98d91993

--- a/accessible/tests/mochitest/test_bug420863.html
+++ b/accessible/tests/mochitest/test_bug420863.html
@@ -33,7 +33,7 @@
         return;
       }
 
-      is(td1Acc.numActions, 0,
+      is(td1Acc.actionCount, 0,
            "Simple table cell shouldn't have any actions");
 
       //////////////////////////////////////////////////////////////////////////
@@ -67,7 +67,7 @@
             this.ID.removeEventListener("click", gClickHandler, false);
 
             // check actions
-            is(getAccessible(this.ID).numActions, 0,
+            is(getAccessible(this.ID).actionCount, 0,
                "td3 shouldn't have actions");
           }
         }
