--- a/accessible/tests/mochitest/test_nsIAccessibleImage.html
+++ b/accessible/tests/mochitest/test_nsIAccessibleImage.html
@@ -77,7 +77,7 @@
     }
 
     function testThis(aID, aSRC, aWidth, aHeight,
-                      aNumActions, aActionNames)
+                      aActionCount, aActionNames)
     {
       var acc = getAccessible(aID, [nsIAccessibleImage]);
       if (!acc)
@@ -93,8 +93,8 @@
       var attributes = {"src": aSRC};
       testAttrs(acc, attributes, true);
 
-      if (aNumActions) {
-        is(acc.numActions, aNumActions,
+      if (aActionCount) {
+        is(acc.actionCount, aActionCount,
            "Wrong number of actions for " + aID + "!");
 
         for (index = 0; index < aActionNames.length; index++)
