--- a/accessible/tests/mochitest/test_textboxes.html
+++ b/accessible/tests/mochitest/test_textboxes.html
@@ -30,7 +30,7 @@
                "", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -41,7 +41,7 @@
                "", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -52,7 +52,7 @@
                "I have some text", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -63,7 +63,7 @@
                "", // value
                "", // description
                ROLE_PASSWORD_TEXT, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -74,7 +74,7 @@
                "", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -85,7 +85,7 @@
                "", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -96,7 +96,7 @@
                "    I also have some text.\n    ", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -107,7 +107,7 @@
                "You cannot change me.", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
@@ -118,7 +118,7 @@
                "    You cannot change me, either.\n    ", // value
                "", // description
                ROLE_ENTRY, // role
-               1, // numActions
+               1, // actionCount
                "activate",  // ActionName
                "Activate"); // ActionDescription
 
