Bug 744830 - Implement fast serializer for innerHTML/outerHTML, p=jdm+smaug, r=hsivonen
UltraBlame original commit: 7bf0125b26b564ebcd549606d2f0b9c212860aae

--- a/content/base/test/test_bug392511.html
+++ b/content/base/test/test_bug392511.html
@@ -27,7 +27,7 @@
 /** Test for Bug 392511 **/
 
 var results = [
- "'\"&amp;'",
+ "\"&quot;&amp;\"",
  "\"&quot;&amp;\"",
  "\"'&amp;\"",
  "\"'&amp;\"",
