--- a/dom/tests/mochitest/whatwg/postMessage_chrome_helper.html
+++ b/dom/tests/mochitest/whatwg/postMessage_chrome_helper.html
@@ -12,7 +12,11 @@
         respond("path-is-set");
       } else {
         // Content cannot post to chrome without privileges
-        window.parent.postMessage("SHOULD NOT GET THIS!", "*");
+        try {
+          window.parent.postMessage("SHOULD NOT GET THIS!", "*");
+        }
+        catch (ex) {
+        }
 
         var msg = "post-to-content-response";
 
@@ -33,9 +37,7 @@
     
     function respond(msg)
     {
-      // ...so get privileges and test that this works with privileges
-      netscape.security.PrivilegeManager.enablePrivilege("UniversalXPConnect");
-      window.parent.postMessage(msg, "*");
+      SpecialPowers.wrap(window).parent.postMessage(msg, "*");
     }
     
     window.addEventListener("message", receiveMessage, false);
