Backed out changeset b40369a421bd (bug 762049)
UltraBlame original commit: 5d64c6f58785a3d33e34afcf873462a4e10d6a7a

--- a/dom/browser-element/mochitest/test_browserFrame7.html
+++ b/dom/browser-element/mochitest/test_browserFrame7.html
@@ -1,4 +1,22 @@
+<!DOCTYPE HTML>
+<html>
 
+
+
+<head>
+  <title>Test for Bug 725796</title>
+  <script type="application/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>
+  <script type="application/javascript" src="browserFrameHelpers.js"></script>
+  <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
+</head>
+<body>
+<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=725796">Mozilla Bug 725796</a>
+
+
+
+
+
+<script type="application/javascript;version=1.7">
 "use strict";
 
 browserFrameHelpers.setEnabledPref(true);
@@ -16,8 +34,8 @@ function runTest() {
   });
   iframe.mozbrowser = true;
   iframe.src = 'data:text/html,Outer iframe <iframe id="inner-iframe"></iframe>';
-  
-  
+  // For kicks, this test uses a display:none iframe.  This shouldn't make a
+  // difference in anything.
   iframe.style.display = 'none';
   document.body.appendChild(iframe);
 
@@ -57,7 +75,7 @@ function outerIframeLoaded() {
   }
   mm.addMessageListener('test:test-fail', onRecvTestFail);
 
-  mm.loadFrameScript(injectedScript,  false);
+  mm.loadFrameScript(injectedScript, /* allowDelayedLoad = */ false);
 
   waitForMessages(6);
 }
@@ -72,3 +90,7 @@ function waitForMessages(num) {
 }
 
 runTest();
+
+</script>
+</body>
+</html>
