--- a/dom/browser-element/mochitest/test_browserFrameAlert.html
+++ b/dom/browser-element/mochitest/test_browserFrameAlert.html
@@ -1,4 +1,22 @@
+<!DOCTYPE HTML>
+<html>
 
+
+
+<head>
+  <title>Test for Bug 741587</title>
+  <script type="application/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>
+  <script type="application/javascript" src="browserFrameHelpers.js"></script>
+  <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
+</head>
+<body>
+<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=741587">Mozilla Bug 741587</a>
+
+
+
+
+
+<script type="application/javascript;version=1.7">
 "use strict";
 
 SimpleTest.waitForExplicitFinish();
@@ -25,8 +43,8 @@ function runTest() {
     ok(false, msg.json);
   });
 
-  
-  
+  // Wait for the initial load to finish, then navigate the page, then wait
+  // for that load to finish, then start test1.
   iframe.addEventListener('mozbrowserloadend', function loadend() {
     iframe.removeEventListener('mozbrowserloadend', loadend);
     iframe.src = browserFrameHelpers.emptyPage1;
@@ -42,32 +60,32 @@ function runTest() {
 function test1() {
   iframe.addEventListener('mozbrowsershowmodalprompt', test2);
 
-  
-  
+  // Do window.alert within the iframe, then modify the global |testState|
+  // after the alert.
   var script = 'data:,\
     testState = 0; \
     content.alert("Hello, world!"); \
     testState = 1; \
   ';
 
-  mm.loadFrameScript(script,  false);
+  mm.loadFrameScript(script, /* allowDelayedLoad = */ false);
 
-  
+  // Triggers a mozbrowsershowmodalprompt event, which sends us down to test2.
 }
 
-
+// test2 is a mozbrowsershowmodalprompt listener.
 function test2(e) {
   iframe.removeEventListener("mozbrowsershowmodalprompt", test2);
 
   is(e.detail.message, 'Hello, world!');
-  e.preventDefault(); 
+  e.preventDefault(); // cause the alert to block.
 
   SimpleTest.executeSoon(function() { test2a(e); });
 }
 
 function test2a(e) {
-  
-  
+  // The iframe should be blocked on the alert call at the moment, so testState
+  // should still be 0.
   var script = 'data:,\
     if (testState === 0) { \
       sendAsyncMessage("test-success", "1: Correct testState"); \
@@ -76,14 +94,14 @@ function test2a(e) {
       sendAsyncMessage("test-fail", "1: Wrong testState: " + testState); \
     }';
 
-  mm.loadFrameScript(script,  false);
+  mm.loadFrameScript(script, /* allowDelayedLoad = */ false);
   numPendingChildTests++;
 
   waitForPendingTests(function() { test3(e); });
 }
 
 function test3(e) {
-  
+  // Now unblock the iframe and check that the script completed.
   e.detail.unblock();
 
   var script2 = 'data:,\
@@ -94,12 +112,12 @@ function test3(e) {
       sendAsyncMessage("test-try-again", "2: Wrong testState (for now): " + testState); \
     }';
 
-  
-  
+  // Urgh.  e.unblock() didn't necessarily unblock us immediately, so we have
+  // to spin and wait.
   function onTryAgain() {
     SimpleTest.executeSoon(function() {
-      
-      mm.loadFrameScript(script2,  false);
+      //dump('onTryAgain\n');
+      mm.loadFrameScript(script2, /* allowDelayedLoad = */ false);
     });
   }
 
@@ -111,21 +129,21 @@ function test3(e) {
 }
 
 function test4() {
-  
-  
+  // Navigate the iframe while an alert is pending.  This shouldn't screw
+  // things up.
 
   iframe.addEventListener("mozbrowsershowmodalprompt", test5);
 
   var script = 'data:,content.alert("test4");';
-  mm.loadFrameScript(script,  false);
+  mm.loadFrameScript(script, /* allowDelayedLoad = */ false);
 }
 
-
+// test4 is a mozbrowsershowmodalprompt listener.
 function test5(e) {
   iframe.removeEventListener('mozbrowsershowmodalprompt', test4);
 
   is(e.detail.message, 'test4');
-  e.preventDefault(); 
+  e.preventDefault(); // cause the page to block.
 
   SimpleTest.executeSoon(test5a);
 }
@@ -157,4 +175,6 @@ function waitForPendingTests(next) {
 }
 
 runTest();
-
+</script>
+</body>
+</html>
