--- a/dom/browser-element/mochitest/test_browserFrame_keyEvents.html
+++ b/dom/browser-element/mochitest/test_browserFrame_keyEvents.html
@@ -1,29 +1,48 @@
+<!DOCTYPE HTML>
+<html>
 
 
+
+<head>
+  <title>Test for Bug 757486</title>
+  <script type="application/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>
+  <script type="application/javascript" src="/tests/SimpleTest/EventUtils.js"></script>
+  <script type="application/javascript" src="browserFrameHelpers.js"></script>
+  <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
+</head>
+<body>
+<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=757486">Mozilla Bug 757486</a>
+
+
+
+
+
+
+<script type="application/javascript;version=1.7">
 "use strict";
 
 let Ci = Components.interfaces;
 
 let whitelistedEvents = [
-  Ci.nsIDOMKeyEvent.DOM_VK_ESCAPE,   
+  Ci.nsIDOMKeyEvent.DOM_VK_ESCAPE,   // Back button.
   Ci.nsIDOMKeyEvent.DOM_VK_CONTEXT_MENU,
-  Ci.nsIDOMKeyEvent.DOM_VK_F5,       
-  Ci.nsIDOMKeyEvent.DOM_VK_PAGE_UP,  
-  Ci.nsIDOMKeyEvent.DOM_VK_PAGE_DOWN 
+  Ci.nsIDOMKeyEvent.DOM_VK_F5,       // Search button.
+  Ci.nsIDOMKeyEvent.DOM_VK_PAGE_UP,  // Volume up.
+  Ci.nsIDOMKeyEvent.DOM_VK_PAGE_DOWN // Volume down.
 ];
 
 SimpleTest.waitForExplicitFinish();
 
 browserFrameHelpers.setEnabledPref(true);
 browserFrameHelpers.addToWhitelist();
-browserFrameHelpers.setOOPDisabledPref(true); 
+browserFrameHelpers.setOOPDisabledPref(true); // this is breaking the autofocus.
 
 var iframe = document.createElement('iframe');
 iframe.mozbrowser = true;
 iframe.src = browserFrameHelpers.focusPage;
 document.body.appendChild(iframe);
 
-
+// Number of expected events at which point we will consider the test as done.
 var nbEvents = 15;
 
 function eventHandler(e) {
@@ -54,18 +73,18 @@ function runTest() {
   addEventListener('keypress', eventHandler);
   addEventListener('keyup', eventHandler);
 
-  
+  // Those event should not be received because not whitelisted.
   synthesizeKey("VK_A", {});
   synthesizeKey("VK_B", {});
 
-  
+  // Those events should not be received because prevent default is called.
   synthesizeKey("VK_ESCAPE", {});
 
-  
-  synthesizeKey("VK_F5", {}); 
+  // Those events should be received.
+  synthesizeKey("VK_F5", {}); // F5 key is going to be canceled by ESC key.
   synthesizeKey("VK_ESCAPE", {});
-  synthesizeKey("VK_PAGE_UP", {});   
-  synthesizeKey("VK_PAGE_DOWN", {}); 
+  synthesizeKey("VK_PAGE_UP", {});   // keypress is ignored because .preventDefault() will be called.
+  synthesizeKey("VK_PAGE_DOWN", {}); // keypress is ignored because .preventDefault() will be called.
   synthesizeKey("VK_CONTEXT_MENU", {});
 }
 
@@ -74,3 +93,7 @@ SimpleTest.waitForFocus(function() {
   SimpleTest.executeSoon(runTest);
 });
 
+</script>
+
+</body>
+</html>
