--- a/browser/extensions/pdfjs/content/web/viewer.html
+++ b/browser/extensions/pdfjs/content/web/viewer.html
@@ -223,7 +223,7 @@
                     data-l10n-id="page_rotate_ccw"></menuitem>
         </menu>
 
-      <div id="viewerContainer">   
+        <div id="viewerContainer" tabindex="0">
           <div id="viewer"></div>
         </div>
 
