Bug 929435 - Treat undefined as null in Contacts API strings. r=gwagner
UltraBlame original commit: 14215376a81094747cd303bbcca9c2781c0b59b9

--- a/dom/contacts/tests/test_contacts_basics.html
+++ b/dom/contacts/tests/test_contacts_basics.html
@@ -1668,6 +1668,22 @@ var steps = [
     }
     next();
   },
+  function() {
+    ok(true, "Undefined strings should be treated as null");
+    var c = new mozContact({
+      adr: [{value: undefined}],
+      email: [{value: undefined}],
+      url: [{value: undefined}],
+      impp: [{value: undefined}],
+      tel: [{value: undefined}],
+    });
+    is(c.adr[0].type, null, "adr is null");
+    is(c.email[0].type, null, "email is null");
+    is(c.url[0].type, null, "url is null");
+    is(c.impp[0].type, null, "impp is null");
+    is(c.tel[0].type, null, "tel is null");
+    next();
+  },
   function () {
     ok(true, "all done!\n");
     clearTemps();
