--- a/js/xpconnect/tests/mochitest/test_bug691059.html
+++ b/js/xpconnect/tests/mochitest/test_bug691059.html
@@ -48,6 +48,7 @@ testEventTarget(window);
 testEventTarget(document);
 testEventTarget(document.documentElement);
 
+testInterface(Window);
 testInterface(Document);
 testInterface(HTMLElement);
 
