--- a/content/base/test/test_bug840098.html
+++ b/content/base/test/test_bug840098.html
@@ -20,7 +20,9 @@
 <script type="application/javascript">
 
 /** Test for Bug 840098 **/
-var anonymousNode = document.getElementById("m").outerDiv;
+
+var mar = document.getElementById("m");
+var anonymousNode = SpecialPowers.unwrap(SpecialPowers.wrap(document).getAnonymousNodes(mar)[0]);
 try {
   document.implementation.createDocument("", "", null).adoptNode(anonymousNode);
   ok(false, "shouldn't be able to adopt the root of an anonymous subtree");
