--- a/dom/permission/tests/test_keyboard.html
+++ b/dom/permission/tests/test_keyboard.html
@@ -18,13 +18,13 @@
 <script type="application/javascript;version=1.8">
 var gData = [
   {
-    perm: ["keyboard"],
+    perm: ["input"],
     obj: "mozInputMethod",
     webidl: "MozInputMethod",
     settings: [["dom.mozInputMethod.enabled", true]],
   },
   {
-    perm: ["inputmethod-manage"],
+    perm: ["input-manage"],
     obj: "mozKeyboard",
     idl: "nsIB2GKeyboard",
   }
