Bug 919885: Move Worker to WebIDL and thread-agnostic event dispatch. r=bent,bz
UltraBlame original commit: 22c5b68ae2e9f2931969570caaf2ea1295b0c225

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -593,6 +593,7 @@ var interfaceNamesInGlobalScope =
     "WheelEvent",
     "Window",
     "WindowUtils",
+    "Worker",
     "XMLDocument",
     "XMLHttpRequest",
     "XMLHttpRequestUpload",
