Bug 928312: Convert the worker global object and all remaining EventTargets to new DOM bindings. r=bent,peterv,smaug
UltraBlame original commit: 2e66e700722394f2329aace31a28f0d4f9b8cea5

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -329,6 +329,7 @@ var interfaceNamesInGlobalScope =
     "MediaStreamEvent",
     "MediaStreamTrack",
     "MessageEvent",
+    "MessagePort",
     "MimeType",
     "MimeTypeArray",
     "ModalContentWindow",
