Bug 936994 - Update html5lib-tests to latest version as of Oct 8, 2013. r=hsivonen
UltraBlame original commit: f62c40b75f22677a3902b00a865eb219f1e52e41

--- a/parser/htmlparser/tests/mochitest/test_html5_tree_construction.html
+++ b/parser/htmlparser/tests/mochitest/test_html5_tree_construction.html
@@ -19,6 +19,7 @@
                          "adoption02.dat",
                          "comments01.dat",
                          "doctype01.dat",
+                         "domjs-unsafe.dat",
                          "entities01.dat",
                          "entities02.dat",
                          "html5test-com.dat",
@@ -32,6 +33,7 @@
                          "scripted/ark.dat",
                          "scriptdata01.dat",
                          "tables01.dat",
+                         "template.dat",
                          "tests10.dat",
                          "tests11.dat",
                          "tests12.dat",
