Bug 814629 - Part 5: modify mozMobileConnection related tests. r=hsinyi,khuey
UltraBlame original commit: 5b2f8a5fcd7f7715dff838ffb8d1a5cf3bf815d3

--- a/dom/permission/tests/test_mobileconnection.html
+++ b/dom/permission/tests/test_mobileconnection.html
@@ -19,8 +19,8 @@
 var gData = [
   {
     perm: ["mobileconnection"],
-    obj: "mozMobileConnection",
-    idl: "nsIDOMMozMobileConnection",
+    obj: "mozMobileConnections",
+    webidl: "MozMobileConnectionArray",
   },
 ]
 </script>
