--- a/dom/permission/tests/test_systemXHR.html
+++ b/dom/permission/tests/test_systemXHR.html
@@ -17,7 +17,7 @@
 <script type="application/javascript;version=1.8" src="file_framework.js"></script>
 <script type="application/javascript;version=1.8">
 function verifier(success, failure) {
-  var xhr = new XMLHttpRequest({mozAnon: true, mozSystem: true});
+  var xhr = new XMLHttpRequest({mozSystem: true});
   if (xhr.mozSystem === true) {
     success("systemXHR");
   } else {
