--- a/dom/workers/test/test_navigator.html
+++ b/dom/workers/test/test_navigator.html
@@ -35,6 +35,11 @@
       return;
     }
 
+    if (args.name === "taintEnabled") {
+      is(navigator[args.name](), args.value, args.name + "() returns false.");
+      return;
+    }
+
     is(navigator[args.name], args.value,
        "Mismatched navigator string for " + args.name + "!");
   };
