Bug 939414 - Dump memory stats for browser-chrome. (r=ted)
UltraBlame original commit: e889f242bb58db805f64d400dbf7cd98c9c73762

--- a/testing/mochitest/tests/index.html
+++ b/testing/mochitest/tests/index.html
@@ -2,6 +2,7 @@
 <head>
     
     <script type="text/javascript" src="../MochiKit/MochiKit.js"></script>
+    <script type="text/javascript" src="SimpleTest/MemoryStats.js"></script>
     <script type="text/javascript" src="SimpleTest/TestRunner.js"></script>
     <script type="text/javascript" src="SimpleTest/MozillaLogger.js"></script>
     
