--- a/content/html/content/test/forms/test_submit_invalid_file.html
+++ b/content/html/content/test/forms/test_submit_invalid_file.html
@@ -35,7 +35,8 @@
 
     var i = document.getElementsByTagName('input')[0];
 
-    var file = FileUtils.getFile("TmpD", ["testfile"]);
+    var file = FileUtils.getDir("TmpD", [], false);
+    file.append("testfile");
     file.createUnique(SpecialPowers.Ci.nsIFile.NORMAL_FILE_TYPE, 0644);
 
     SpecialPowers.wrap(i).value = file.path;
